src/css/widgets/FurnitureWidgets.css
/* ... */
.nitro-stickie-image {
    &.stickie-christmas {
        background-image: url('@/assets/images/room-widgets/stickie-widget/stickie-christmas.png');
    }

    &.stickie-shakesp {
        background-image: url('@/assets/images/room-widgets/stickie-widget/stickie-shakesp.png');
    }

    &.stickie-dreams {
        background-image: url('@/assets/images/room-widgets/stickie-widget/stickie-dreams.png');
    }

    &.stickie-heart {
        background-image: url('@/assets/images/room-widgets/stickie-widget/stickie-heart.png');
    }

    &.stickie-juninas {
        background-image: url('@/assets/images/room-widgets/stickie-widget/stickie-juninas.png');
    }

    &.stickie-close {
        width: 10px;
        height: 10px;
        background-image: url('@/assets/images/room-widgets/stickie-widget/stickie-close.png');
    }

    &.stickie-trash {
        width: 9px;
        height: 10px;
        background-image: url('@/assets/images/room-widgets/stickie-widget/stickie-trash.png');
    }
}

.nitro-engraving-lock {
    width: 300px;

    .engraving-lock-stage-1 {
        width: 31px;
        height: 39px;
        background-position: -380px -43px;
        background-image: url('@/assets/images/room-widgets/engraving-lock-widget/engraving-lock-spritesheet.png');
    }

    .engraving-lock-stage-2 {
        width: 36px;
        height: 43px;
        background-position: -375px 0px;
        background-image: url('@/assets/images/room-widgets/engraving-lock-widget/engraving-lock-spritesheet.png');
    }
}

/* lovelock_engraving_xml.xml — 375×210, absolute layout */
.nitro-engraving-lock-view {
    position: relative;
    width: 375px;
    height: 210px;
    background-image: url('@/assets/images/room-widgets/engraving-lock-widget/engraving-lock-spritesheet.png');
    background-position: 0 0;
    background-repeat: no-repeat;
    background-size: 411px 630px;
    image-rendering: pixelated;
    color: #59224a;
    font-family: UbuntuCondensed, Ubuntu, sans-serif;
    font-weight: 700;
    font-size: 12px;
    line-height: 17px;
    text-shadow: 0 1px 0 #ffffff;
    user-select: none;
}

.nitro-engraving-lock-view.engraving-lock-3 {
    background-position: 0 -210px;
    color: #614110;
}

.nitro-engraving-lock-view.engraving-lock-4 {
    background-position: 0 -420px;
    color: #f1dcc8;
    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.35);
}

.nitro-engraving-lock-view .engraving-lock-close {
    position: absolute;
    top: 33px;
    right: 24px;
    width: 21px;
    height: 17px;
    padding: 0;
    border: 0;
    background: transparent;
    cursor: pointer;
}

.nitro-engraving-lock-view .engraving-lock-avatar {
    position: absolute;
    top: 7px;
    width: 70px;
    height: 115px;
    overflow: hidden;
    pointer-events: none;
}

.nitro-engraving-lock-view .engraving-lock-avatar .avatar-image {
    position: absolute !important;
    bottom: 0;
    left: 50%;
    width: 90px !important;
    height: 130px !important;
    margin-left: 0 !important;
    transform: translateX(-50%);
    image-rendering: pixelated;
}

.nitro-engraving-lock-view .engraving-lock-avatar--left .avatar-image {
    margin-left: -10px !important;
    transform: translateX(calc(-50% - 5px));
}

.nitro-engraving-lock-view .engraving-lock-avatar--right .avatar-image {
    margin-left: -15px !important;
    transform: translateX(calc(-50% - 7px));
}

.nitro-engraving-lock-view .engraving-lock-avatar--left {
    left: 115px;
}

.nitro-engraving-lock-view .engraving-lock-avatar--right {
    left: 186px;
}

.nitro-engraving-lock-view .engraving-lock-header,
.nitro-engraving-lock-view .engraving-lock-date,
.nitro-engraving-lock-view .engraving-lock-name {
    position: absolute;
    display: block;
    height: 17px;
    margin: 0;
    padding: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    box-sizing: border-box;
}

.nitro-engraving-lock-view .engraving-lock-header {
    top: 126px;
    left: 82px;
    width: 217px;
    text-align: center;
}

.nitro-engraving-lock-view .engraving-lock-date {
    top: 151px;
    left: 143px;
    width: 97px;
    text-align: center;
}

.nitro-engraving-lock-view .engraving-lock-name {
    top: 175px;
}

.nitro-engraving-lock-view .engraving-lock-name--left {
    left: 19px;
    width: 150px;
    text-align: right;
}

.nitro-engraving-lock-view .engraving-lock-name--right {
    left: 199px;
    width: 87px;
    text-align: left;
}

.nitro-widget-high-score {
    border-radius: 0.3rem;
    border: solid 1px #000;

    .header {
        border-image-source: none !important;
        background-color: #40403e;
        border-radius: 0.3rem 0.3rem 0 0;
    }

    .align-right {
        text-align: right;
    }

    .section-border {
        border: solid 1px #8c8a88;
    }

    .high-score-content {
        height: 100%;
        background-color: #000;
        border-radius: 0.3rem;
    }

    .score-footer {
        color: #9a9896;
        font-weight: bold;
    }
}
/* ... */

